// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ring icons across themes > renders ring icons for the aurora theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_2_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_2_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_3_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_3_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_3_)"
      r="106"
      stroke="url(#ring-gradient-_r_3_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Ring icons across themes > renders ring icons for the citrus theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_8_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_8_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_9_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_9_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_9_)"
      r="106"
      stroke="url(#ring-gradient-_r_9_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Ring icons across themes > renders ring icons for the hardstuck theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_c_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_c_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_d_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_d_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_d_)"
      r="106"
      stroke="url(#ring-gradient-_r_d_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Ring icons across themes > renders ring icons for the kitten theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_4_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_4_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_5_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_5_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_5_)"
      r="106"
      stroke="url(#ring-gradient-_r_5_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Ring icons across themes > renders ring icons for the lg theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_0_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_0_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_1_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_1_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_1_)"
      r="106"
      stroke="url(#ring-gradient-_r_1_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Ring icons across themes > renders ring icons for the noir theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_a_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_a_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_b_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_b_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_b_)"
      r="106"
      stroke="url(#ring-gradient-_r_b_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Ring icons across themes > renders ring icons for the ocean theme 1`] = `
<div
  class="flex gap-4"
>
  <svg
    aria-hidden="true"
    class="h-full w-full rotate-[-90deg]"
    focusable="false"
    viewBox="0 0 64 64"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_6_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
    </defs>
    <circle
      class="text-foreground/20"
      cx="32"
      cy="32"
      fill="none"
      r="26"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      class="text-accent shadow-ring motion-safe:animate-pulse [--ring:var(--accent-1)]"
      cx="32"
      cy="32"
      fill="none"
      filter="url(#ring-noise-_r_6_)"
      r="26"
      stroke="currentColor"
      stroke-dasharray="163.36281798666926"
      stroke-dashoffset="65.34512719466771"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <svg
    aria-label="Timer 80% complete"
    class="h-full w-full rotate-[-90deg]"
    role="img"
    viewBox="0 0 224 224"
  >
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="objectBoundingBox"
        height="130%"
        id="ring-noise-_r_7_"
        width="130%"
        x="-15%"
        y="-15%"
      >
        <feturbulence
          baseFrequency="1.1"
          numOctaves="3"
          result="noise"
          seed="4"
          type="fractalNoise"
        />
        <fecolormatrix
          in="noise"
          result="monoNoise"
          type="saturate"
          values="0"
        />
        <fecomponenttransfer
          in="monoNoise"
          result="noiseAlpha"
        >
          <fefunca
            slope="0.1"
            type="linear"
          />
        </fecomponenttransfer>
        <feblend
          in="SourceGraphic"
          in2="noiseAlpha"
          mode="soft-light"
        />
      </filter>
      <lineargradient
        id="ring-gradient-_r_7_"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent-1))"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent-2))"
        />
      </lineargradient>
    </defs>
    <circle
      cx="112"
      cy="112"
      fill="none"
      r="106"
      stroke="hsl(var(--card-hairline))"
      stroke-width="4"
    />
    <circle
      class="drop-shadow-[0_0_calc(var(--space-3)/2)_hsl(var(--neon-soft))] transition-[stroke-dashoffset] duration-motion-sm ease-linear motion-reduce:transition-none"
      cx="112"
      cy="112"
      fill="none"
      filter="url(#ring-noise-_r_7_)"
      r="106"
      stroke="url(#ring-gradient-_r_7_)"
      stroke-dasharray="666.0176425610362"
      stroke-dashoffset="133.20352851220719"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;
